# rag-hex

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  architecture.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
frontend/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  middleware.ts
frontend/app/chat/: layout.tsx
frontend/app/documents/: page.tsx
frontend/app/login/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/chat/: chat-panel.tsx  message-bubble.tsx
frontend/components/layout/: navbar.tsx  sidebar.tsx
frontend/components/ui/: button.tsx  input.tsx
frontend/lib/api/: client.ts
frontend/lib/auth/: auth-options.ts
frontend/lib/hooks/: use-query-stream.ts
frontend/lib/types/: api.ts
rag_system/: README.md
rag_system/adapter/: README.md
rag_system/adapter/inbound/: README.md
rag_system/adapter/outbound/: README.md
rag_system/config/: README.md  container.py  settings.py
rag_system/domain/: README.md  exceptions.py
rag_system/domain/model/: README.md  document.py  embedding.py  query.py
rag_system/domain/port/: README.md
rag_system/domain/service/: README.md  ingestion_service.py  query_service.py
tests/integration/: conftest.py  test_full_flow.py
tests/unit/adapter/: test_api_router.py  test_in_memory_retriever.py  test_openrouter_embedder.py  test_openrouter_llm.py  test_postgres_document_store.py  test_qdrant_retriever.py
(+31 files in other folders)
